<resources>
    <string name="app_name">Task_2</string>
    <string name="back_button">Back</string>
    <string name="people_tech_group">LOGIN PAGE</string>
    <string name="Logo">Logo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="Dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_progress">Set Progress</string>

</resources>