<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

<!--Heading Layout-->

    <LinearLayout
        android:id="@+id/Login_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/round_border_backbutton"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_button"
            android:layout_marginEnd="16dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/Login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_tech_group"
            android:textColor="@android:color/white"
            android:layout_marginStart="70dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/login_logo_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/Logo"
            android:src="@drawable/img" />

    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="com.example.task_2.Fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
